# vibecoding_week_1

./: .dockerignore  .gitattributes  .gitignore  docker-compose.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: ai.py  db.py  main.py  models.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_board.py  test_chat.py  test_health.py
docs/: DATABASE.md  PLAN.md
frontend/: CLAUDE.md  next.config.ts  playwright.config.ts
frontend/src/components/: App.test.tsx  App.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  kanban.ts
frontend/src/test/: helpers.ts
frontend/tests/: kanban.spec.ts
scripts/: CLAUDE.md  start.ps1  start.sh  stop.ps1  stop.sh
